--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
 *.class
 
+#Maven things
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
@@ -7,6 +18,20 @@
 *.jar
 *.war
 *.ear
+
+#IDE things
+# Eclipse
+.classpath
+.project
+.settings/
+
+# Intellij
+.idea/
+*.iml
+*.iws
+
+# Mac
+.DS_Store
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
